fix visibility of presenter notes with multiple sections

--- a/src/client/styles/styles.less
+++ b/src/client/styles/styles.less
@@ -410,7 +410,7 @@ body,
                     &.with-notes {
 
                         > [id^=notes],
-                        > [id^=notes] + * {
+                        > [id^=notes] ~ * {
                             display: none;
                         }
                     }
@@ -815,7 +815,7 @@ body,
                         }
 
                         > [id^=notes],
-                        > [id^=notes] + * {
+                        > [id^=notes] ~ * {
                             display: inherit;
                         }
 
@@ -824,7 +824,7 @@ body,
                             font-weight: normal;
                         }
 
-                        > [id^=notes] + * {
+                        > [id^=notes] ~ * {
                             background-color: @highlight-color;
                             padding: 5px;
                             margin: 0;
@@ -1079,7 +1079,7 @@ body.mobile-mode {
                                 &.with-notes {
 
                                     > [id^=notes],
-                                    > [id^=notes] + * {
+                                    > [id^=notes] ~ * {
                                         display: inherit;
                                     }
                                 }
